# fbras_himorna

./: .dockerignore  .env  Dockerfile  README.md  cmd  docker-compose.yml  run.sh
HimornaCodeBase/: .api.py.swp  api.py  api.wsgi  pyproject.toml  requirements.txt  server-requirements.txt  wsgi.py
HimornaCodeBase/.ipynb_checkpoints/: api-checkpoint.py  api-checkpoint.wsgi
HimornaCodeBase/files/: genes_result_4100.tab
Himorna_frontend/: Dockerfile  package-lock.json  package.json
Himorna_frontend/src/: main.js
Himorna_frontend/src/components/: Links.vue  MyTable.vue
Himorna_frontend/src/components/charts/: ChartCombo.vue
Himorna_frontend/src/router/: index.js
Himorna_frontend/src/store/modules/: dashboard.js  info.js  search.js
Himorna_frontend/src/views/: Corr.vue  Dashboard.vue  Gene.vue  Help.vue  Histone.vue  LncRNA.vue  Result.vue  Search.vue  Wrong.vue
Himorna_frontend/src/views/.ipynb_checkpoints/: Corr-checkpoint.vue  Result-checkpoint.vue
apache/: 000-default.conf  apache2.conf  launcher.py
files/: peaks.csv  peaks.zst
